examples/invalid/test12.alice

The room main () contained a number
opened
   x was a number.
   x became 15.
   The room func () contained a number
   opened
   closed
closed
